--- a/TocTinyClient/MainChat.xaml
+++ b/TocTinyClient/MainChat.xaml
@@ -1,25 +1,25 @@
-﻿<Window x:Class="TocTiny.MainChat"
+﻿<UserControl x:Class="TocTiny.MainChat"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TocTiny" Closing="Window_Closing"
-        mc:Ignorable="d" Loaded="Window_Loaded" Background="#F5F6F7"
-        Title="MainChat" Height="650" Width="1024">
+        xmlns:local="clr-namespace:TocTiny"
+        mc:Ignorable="d" Loaded="Window_Loaded"
+        MinHeight="65" MinWidth="102.4">
     <Grid Grid.Row="1" PreviewMouseDown="Grid_PreviewMouseDown">
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition/>
-            <RowDefinition Height="3"/>
-            <RowDefinition Height="130"/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="477*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="130*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Column="0">
             <Label Name="ChannelName" Margin="15,3,0,3" VerticalAlignment="Center" HorizontalAlignment="Left" Content="TOC Tiny Chat Room" Width="250" BorderBrush="#000" BorderThickness="0,0,0,1" FontSize="20"/>
         </Grid>
         <ScrollViewer Name="ChatScroller" Grid.Row="1" Background="White" CanContentScroll="False">
             <Border BorderThickness="0" Padding="0,0,0,10" VirtualizingPanel.ScrollUnit="Pixel">
-                <StackPanel Name="ChatMsgContainer" Margin="20,0" Orientation="Vertical">
-                    <!--这里存放动态生成的消息-->
+                <StackPanel x:Name="ChatMsgContainer"  Orientation="Vertical">
+
                 </StackPanel>
             </Border>
         </ScrollViewer>
@@ -118,4 +118,4 @@
             <Button Margin="0,0,15,15" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="30" Width="90" Content="Send" Click="Send_Click"/>
         </Grid>
     </Grid>
-</Window>
+</UserControl>
