--- a/TocTinyClient/Login.xaml
+++ b/TocTinyClient/Login.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="TocTiny.Login"
+﻿<UserControl x:Class="TocTiny.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TocTiny"
         mc:Ignorable="d"
-        Title="MainWindow" Height="385" Width="520">
+        d:DesignHeight="385" d:DesignWidth="520">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -52,4 +52,4 @@
         <Button Name="ConnectButton" Grid.Row="2" IsDefault="True" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0" Width="120" Height="37" Content="Connect" Click="LoginClick"/>
         <Button Grid.Row="2" IsCancel="True" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,150,0" Width="120" Height="37" Content="Cancel" Click="CancelLoginClick"/>
     </Grid>
-</Page>
+</UserControl>
