--- a/TocTinyClient/View/Login.xaml
+++ b/TocTinyClient/View/Login.xaml
@@ -1,17 +1,19 @@
-﻿<Window x:Class="TocTiny.Login"
+﻿<Window x:Class="TocTiny.View.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TocTiny" WindowStartupLocation="CenterScreen"
+        xmlns:viewmodel="clr-namespace:TocTiny.Client.ViewModel"
         mc:Ignorable="d" WindowStyle="None" ResizeMode="NoResize" BorderThickness="1" BorderBrush="#000"
-        Title="MainWindow" Height="385" Width="520">
-    <Grid Name="Whole">
+        Title="MainWindow" Height="385" Width="520" x:Name="Whole" AllowsTransparency="True">
+    <Grid>
         <Grid.Resources>
             <Style TargetType="TextBox">
                 <Setter Property="Height" Value="35"/>
                 <Setter Property="Padding" Value="5,0"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
             </Style>
             <Style TargetType="Button">
@@ -21,13 +23,16 @@
                 <Setter Property="Height" Value="37"/>
             </Style>
         </Grid.Resources>
+        <Grid.DataContext>
+            <viewmodel:LoginViewModel x:Name="ViewModel"/>
+        </Grid.DataContext>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="3*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="TOC Tiny" FontSize="30" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0" Width="220" BorderThickness="0,0,0,2" BorderBrush="#000"/>
-        <Grid Grid.Row="1" Margin="40,20,40,20" Name="DataForm">
+        <Grid Grid.Row="1" Margin="40,20,40,20">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -43,7 +48,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Nickname:" VerticalAlignment="Bottom"/>
-                <TextBox Grid.Row="1" TabIndex="1" Text="{Binding Path=Nickname}"></TextBox>
+                <TextBox Name="NicknameBox" Grid.Row="1" TabIndex="1" Text="{Binding Path=Nickname}"></TextBox>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -51,7 +56,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Server address:" VerticalAlignment="Bottom"/>
-                <TextBox Grid.Row="1" TabIndex="2" Margin="0,0,5,0" Text="{Binding Path=ServerAddress}"></TextBox>
+                <TextBox Name="ServerAddressBox" Grid.Row="1" TabIndex="2" Margin="0,0,5,0" Text="{Binding Path=IPAddress}"></TextBox>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="1" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -59,10 +64,10 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Remote port:" VerticalAlignment="Bottom"/>
-                <TextBox TabIndex="3" Grid.Row="1" Margin="5,0,0,0" Text="{Binding Path=RemotePort}"></TextBox>
+                <TextBox Name="RemotePortBox" TabIndex="3" Grid.Row="1" Margin="5,0,0,0" Text="{Binding Path=Port}"></TextBox>
             </Grid>
         </Grid>
-        <Button Name="Connect" Grid.Row="2" IsDefault="True" Margin="0,0,20,0" Content="Connect"/>
-        <Button Name="Cancel" Grid.Row="2" IsCancel="True"  Margin="0,0,150,0" Content="Cancel"/>
+        <Button Name="ConnectButton" Grid.Row="2" IsDefault="True" Margin="0,0,20,0" Content="{Binding Mode=TwoWay, Path=AcceptButtonContent}"/>
+        <Button Name="CancelButton" Grid.Row="2" IsCancel="True"  Margin="0,0,150,0" Content="Cancel"/>
     </Grid>
 </Window>
