--- a/TocTinyClient/View/Login.xaml
+++ b/TocTinyClient/View/Login.xaml
@@ -48,7 +48,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Nickname:" VerticalAlignment="Bottom"/>
-                <TextBox Name="NicknameBox" Grid.Row="1" TabIndex="1" Text="{Binding Path=Nickname}"></TextBox>
+                <TextBox Name="NicknameBox" Grid.Row="1" TabIndex="1" Text="{Binding Path=Nickname, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -56,7 +56,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Server address:" VerticalAlignment="Bottom"/>
-                <TextBox Name="ServerAddressBox" Grid.Row="1" TabIndex="2" Margin="0,0,5,0" Text="{Binding Path=IPAddress}"></TextBox>
+                <TextBox Name="ServerAddressBox" Grid.Row="1" TabIndex="2" Margin="0,0,5,0" Text="{Binding Path=IPAddress, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="1" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -64,10 +64,10 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Label Content="Remote port:" VerticalAlignment="Bottom"/>
-                <TextBox Name="RemotePortBox" TabIndex="3" Grid.Row="1" Margin="5,0,0,0" Text="{Binding Path=Port}"></TextBox>
+                <TextBox Name="RemotePortBox" TabIndex="3" Grid.Row="1" Margin="5,0,0,0" Text="{Binding Path=Port, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             </Grid>
         </Grid>
-        <Button Name="ConnectButton" Grid.Row="2" IsDefault="True" Margin="0,0,20,0" Content="{Binding Mode=TwoWay, Path=AcceptButtonContent}"/>
+        <Button Name="ConnectButton" Grid.Row="2" IsDefault="True" Margin="0,0,20,0" Content="{Binding AcceptButtonContent}"/>
         <Button Name="CancelButton" Grid.Row="2" IsCancel="True"  Margin="0,0,150,0" Content="Cancel"/>
     </Grid>
 </Window>
