--- a/TocTinyClient/View/MainChat.xaml
+++ b/TocTinyClient/View/MainChat.xaml
@@ -111,8 +111,8 @@
                         <Label Grid.Column="3" Padding="10,3" MouseDown="OnlineInfo_MouseDown" Content="OnlineInfo"/>
                     </Grid>
                 </Border>
-                <TextBox Grid.Row="1" Name="InputBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" AllowDrop="True"
-                             TextWrapping="Wrap" Padding="3" BorderThickness="0" Background="#F5F6F7" DragEnter="InputBox_DragEnter" Drop="InputBox_Drop"
+                <TextBox Grid.Row="1" Name="InputBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" AllowDrop="True" 
+                             TextWrapping="Wrap" Padding="3" BorderThickness="0" Background="#F5F6F7" PreviewDragEnter="InputBox_DragEnter" PreviewDrop="InputBox_Drop"
                              AcceptsReturn="True" AutoWordSelection="True" KeyDown="InputBox_KeyDown" BorderBrush="White"/>
             </Grid>
             <Button Margin="0,0,15,15" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="30" Width="90" Content="Send" Click="Send_Click"/>
